2001-11-04  "stefan" <stefan@lkcc.org>

	* include/sys/locking.h (_LK_UNLCK, LK_UNLCK): Correct names.

2001-10-30  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/io.h (_commit): Add declaration.
	Thanks to: "stefan" <stefan@lkcc.org>  

2001-10-30  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/sys/stat.h: Make S_IS* macros safer.

2001-10-27  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/stdlib.h (EXIT_FAILURE): Change value to 1.

2001-10-12  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/stdlib.h (__p__environ, __p__wenviron): Use
	__STDC__ prototypes.
	
2001-09-19  Earnie Boyd  <earnie@SF.net>

	* Makefile.in: Remove the /usr from the install target.
	(VERSION): Increment.
	include/_mingw.h: Ditto.

2001-09-17  Earnie Boyd  <earnie@SF.net>

	* Makefile.in: Increment version.
	* include/_mingw.h: Ditto.

2001-09-10  Earnie Boyd  <earnie@SF.net>

	* dossh: Remove inadvertantly imported file.

2001-09-10  Danny Smith  <dannysmith@users.sourceforge.net>

	* dirent.c (opendir): Use GetFileAttributes rather than stat
	to determine if input arg is dir.

2001-08-29  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/stdarg.h (va_list): Typedef as __builtin_va_list if
	__GNUC__ >= 3. 
	* include/varargs.h (va_list): Ditto.
	* include/stdio.h (va_list): Ditto.

2001-08-01  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/stdlib.h (_wpgmptr): Don't declare ifndef __MSVCRT__.
	* include/stdio.h (_IORW): Change constant to 0x0080.
	(TMP_MAX): Add new define.
	(_P_tmpdir): Ditto.
	(_wP_tmpdir): Ditto.
	(L_tmpnam): Change constant to 16.

2001-06-28  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/malloc.h: Fix non-ANSI comment after #endif.

2001-06-11  Danny Smith  <danny_r_smith_2001@yahoo.co.nz>

	* profile/configure.in: Make msvcrt.dll version default.
	* profile/makefile.in: Build both gcrt1.o and gcrt2.o.	
	* provile/configure: Regenerate.
